--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <title>TAN Z S</title>
+    
+    <link href="images/icon.png" rel="icon">
 </head>
 
 <body>
