--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <title>TAN Z S</title>
+    <title>Home|TAN Z S</title>
     
     <link href="images/icon.png" rel="icon">
+    <link href="styles/general.css" rel="stylesheet">
 </head>
 
 <body>
     <p>Hello Word</p>
+    <p>@TAN Z S</p>
 </body>
 
 
