--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
 
-<html>
+<html lang="zh">
 
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <title>Home|TAN Z S</title>
+    <title>Home | TAN Z S</title>
     
     <link href="images/icon.png" rel="icon">
     <link href="styles/general.css" rel="stylesheet">
