Update and rename index.html to home.html

--- a/home.html
+++ b/home.html
@@ -9,13 +9,18 @@
     
     <title>Home | TAN Z S</title>
     
-    <link href="images/icon.png" rel="icon">
+    <link href="icons/icon.png" rel="icon">
     <link href="styles/general.css" rel="stylesheet">
 </head>
 
 <body>
-    <p>Hello Word</p>
-    <p>@TAN Z S</p>
+    <div id="start"></div>
+
+    <main>
+        <p>HELLO</p>
+    </main>
+
+    <script src="scripts/main.js"></script>
 </body>
 
 
