--- a/index.html
+++ b/index.html
@@ -9,15 +9,22 @@
     
     <title>Home | TAN Z S</title>
     
-    <link href="icons/icon.png" rel="icon">
+    <link href="icons/favicon-48x48.png" rel="icon">
     <link href="styles/general.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Odibee+Sans&family=Open+Sans:wght@300&family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div id="start"></div>
 
     <main>
-        <p>HELLO</p>
+        <header>
+            <div id="logo"></div>
+        </header>
+
+        <section id="webDesign">
+            <a href="#" onclick="return false"></a>
+        </section>
     </main>
 
     <script src="scripts/main.js"></script>
